--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "vitepress": "^1.0.2"
+  },
+  "dependencies": {
+    "oh-vue-icons": "1.0.0-rc3"
   }
 }
