--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "digikar-docs",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs:dev": "vitepress dev docs",
